# macrokey

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.py  build.sh  cmake.sh  cmake_debug.sh  default.py  install.sh  key_util.cpp  macrokey.py  main.cpp  make.sh  remote.py  requirements.sh  run.sh  thread_timer.py  uhid_device.cpp  uhid_device.h
cpp/: .gitignore  CMakeLists.txt  default.py  macrokey.py
cpp/src/: main.cpp  uinput_device.cpp
rs/: .gitignore  Cargo.toml  README.md
rs/src/: event_device.rs  main.rs  util.rs
rs/src/tasks/: default.rs  log.rs  mod.rs  remote.rs  template.rs  test.rs
src/: event_device.h  main.cpp  main.rs  signals.rs  uhid_device.cpp  uhid_device.h  uinput_device.cpp  uinput_device.h  util.rs
src/tasks/: auto_repeat.rs  default.rs  hotkeys.rs  mod.rs  monitor.rs  remap.rs  remote.rs  test.rs  virtual_device.rs
src/utils/: functions.rs  key_event_type.rs  macros.rs  mod.rs  signals.rs
