[package]
name = "macrokey"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
log = "0.4.22"
nix = "0.29.0"
tokio = "1.42.0"
evdev = { version = "0.12.2", git = "https://github.com/emberian/evdev.git" }
regex = "1.11.1"

[features]
default = [ 
    "nix/user",
    "evdev/tokio",
    "tokio/full",
    ]
