[package]
name = "macrokey"
version = "0.1.0"
edition = "2021"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
env_logger = "0.11.6"
log = "0.4.22"
nix = "0.29.0"
tokio = "1.42.0"
evdev = { version = "0.12.2", git = "https://github.com/emberian/evdev.git" }
regex = "1.11.1"
once_cell = "1.20.2"

[features]
default = [ 
    "nix/user",
    "evdev/tokio",
    "tokio/full",
    ]
